--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,12 +4,12 @@
     "type": "split",
     "children": [
       {
-        "id": "a7355c05e93f2dda",
+        "id": "dc849af42b702319",
         "type": "leaf",
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Theories/Gall's Law.md",
+            "file": "Nodejs/Parallel, Sequential, and Race.md",
             "mode": "source",
             "source": false
           }
@@ -40,7 +40,7 @@
             "state": {
               "type": "search",
               "state": {
-                "query": "tag:#guide",
+                "query": "",
                 "matchingCase": false,
                 "explainSearch": false,
                 "collapseAll": false,
@@ -77,7 +77,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Theories/Gall's Law.md",
+                "file": "Nodejs/Parallel, Sequential, and Race.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -106,11 +106,17 @@
     "width": 300,
     "collapsed": true
   },
-  "active": "a7355c05e93f2dda",
+  "active": "dc849af42b702319",
   "lastOpenFiles": [
-    "Theories/Gall's Law.md",
-    "Zettelkasten/How to Markdown.md",
-    "Zettelkasten/Zettelkasten.md",
-    "Zettelkasten/How to Obsidian.md"
+    "Nodejs/Parallel, Sequential, and Race.md",
+    "Nodejs/Job Queue.md",
+    "Nodejs/Javascript Async.md",
+    "Nodejs/Observer Pattern.md",
+    "Nodejs/Nodejs Async.md",
+    "Nodejs/Nodejs Internals.md",
+    "Nodejs/JavaScript Runtime.md",
+    "Nodejs/JavaScript Engine.md",
+    "Nodejs/Nodejs System.md",
+    "Nodejs/ECMA Script Optimization.md"
   ]
 }
